google api upload feature seems working now..

--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -4,3 +4,10 @@ mysql.path.mysqldump=C:\\"Program Files"\\MySQL\\"MySQL Server 5.7"\\bin\\mysqld
 mysql.databases=sonar,teamcity
 
 backup.file.destination.folder=D:\\backup\\
+
+google.api.application.name=lf-bom
+
+google.api.credential.dir=.credentials\\
+
+
+google.api.auth.token.path=\\.credentials\\client_secret.json
