Used a path finder to locate parent folder ID instead of hard code.

--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -9,5 +9,8 @@ google.api.application.name=lf-bom
 
 google.api.credential.dir=.credentials\\
 
-
 google.api.auth.token.path=\\.credentials\\client_secret.json
+
+google.drive.backup.path=backup/mysql
+
+google.backup.mime.type=text/x-sql
