--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -14,3 +14,5 @@ google.api.auth.token.path=\\.credentials\\client_secret.json
 google.drive.backup.path=backup/mysql
 
 google.backup.mime.type=text/x-sql
+
+backup.schedule=0 0 12 * * *
