More frequent back up schedule.

--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -15,4 +15,4 @@ google.drive.backup.path=backup/mysql
 
 google.backup.mime.type=text/x-sql
 
-backup.schedule=0 0 22 * * *
+backup.schedule=0 0 0/5 * * *
